<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title_text">My Nanodegree Apps!</string>

    <!-- Button Text -->
    <string name="popularMovies_button_text">Popular Movies</string>
    <string name="stockHawk_button_text">Stock Hawk</string>
    <string name="buildItBigger_button_text">Build It Bigger</string>
    <string name="makeYourAppMaterial_button_text">Make Your App Material</string>
    <string name="goUbiquitous_button_text">Go Ubiquitous</string>
    <string name="capstone_button_text">Capstone</string>

</resources>
