<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorLayoutBackground"
    tools:context="com.bluewolftek.www.myappportfolio.PortfolioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/portfolio_layout"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/title_text"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/title_text_height"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="@dimen/portfolio_button_width"
            android:layout_height="@dimen/portfolio_button_height"
            android:layout_marginTop="@dimen/margin_button_top"
            android:id="@+id/popularMovies_button"
            android:text="@string/popularMovies_button_text"
            android:textColor="@color/colorButtonText"
            android:textSize="@dimen/button_text_height"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorButtonBackground" />

        <Button
            android:layout_width="@dimen/portfolio_button_width"
            android:layout_height="@dimen/portfolio_button_height"
            android:layout_marginTop="@dimen/margin_button_top"
            android:id="@+id/stockHawk_button"
            android:text="@string/stockHawk_button_text"
            android:textColor="@color/colorButtonText"
            android:textSize="@dimen/button_text_height"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorButtonBackground"/>

        <Button
            android:layout_width="@dimen/portfolio_button_width"
            android:layout_height="@dimen/portfolio_button_height"
            android:layout_marginTop="@dimen/margin_button_top"
            android:id="@+id/buildItBigger_button"
            android:text="@string/buildItBigger_button_text"
            android:textColor="@color/colorButtonText"
            android:textSize="@dimen/button_text_height"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorButtonBackground"/>

        <Button
            android:layout_width="@dimen/portfolio_button_width"
            android:layout_height="@dimen/portfolio_button_height"
            android:layout_marginTop="@dimen/margin_button_top"
            android:id="@+id/makeYourAppMaterial_button"
            android:text="@string/makeYourAppMaterial_button_text"
            android:textColor="@color/colorButtonText"
            android:textSize="@dimen/button_text_height"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorButtonBackground"/>

        <Button
            android:layout_width="@dimen/portfolio_button_width"
            android:layout_height="@dimen/portfolio_button_height"
            android:layout_marginTop="@dimen/margin_button_top"
            android:id="@+id/goUbiquitous_button"
            android:text="@string/goUbiquitous_button_text"
            android:textColor="@color/colorButtonText"
            android:textSize="@dimen/button_text_height"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorButtonBackground"/>

        <Button
            android:layout_width="@dimen/portfolio_button_width"
            android:layout_height="@dimen/portfolio_button_height"
            android:layout_marginTop="@dimen/margin_button_top"
            android:id="@+id/capstone_button"
            android:text="@string/capstone_button_text"
            android:textColor="@color/colorButtonText"
            android:textSize="@dimen/button_text_height"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorButtonBackground"/>

   </LinearLayout>

</RelativeLayout>
